fix (tabs): fix vertical tab alignment #11

--- a/src/tabs/style.scss
+++ b/src/tabs/style.scss
@@ -1,37 +1,151 @@
-.wp-block-blablablocks-tabs.is-style-style-1 .blablablock-tab-btn.is-bbb-active-tab::after {
-	position: absolute;
-	top: 100%;
-	left: 50%;
-	margin-left: -10px;
-	width: 0;
-	height: 0;
-	border: solid transparent;
-	border-width: 10px;
-	border-top-color: var(--bbb-tab-background-active-color);
-	content: "";
-	pointer-events: none;
+.wp-block-blablablocks-tabs.is-style-style-1 {
+
+	.blablablock-tab-btn.is-bbb-active-tab::after,
+	&.blablablock-tab-btn.is-bbb-active-tab::after {
+		position: absolute;
+		top: 100%;
+		left: 50%;
+		margin-left: -10px;
+		width: 0;
+		height: 0;
+		border: solid transparent;
+		border-width: 10px;
+		border-top-color: var(--bbb-tab-background-active-color);
+		content: "";
+		pointer-events: none;
+	}
 }
 
-.wp-block-blablablocks-tabs.is-style-style-1.blablablocks-tabs__vertical .blablablock-tab-btn.is-bbb-active-tab::after {
-	top: 50%;
-	left: 100%;
-	margin-left: 0px;
-	transform: translateY(-50%) rotate(270deg);
+.wp-block-blablablocks-tabs.is-style-style-1 {
+
+	.blablablocks-tabs__vertical,
+	&.blablablocks-tabs__vertical {
+		.blablablock-tab-btn.is-bbb-active-tab::after {
+			top: 50%;
+			left: 100%;
+			margin-left: 0px;
+			transform: translateY(-50%) rotate(270deg);
+		}
+	}
 }
 
-.wp-block-blablablocks-tabs.is-style-style-2 .blablablocks-tabs-buttons {
-	border-bottom: 1px solid var(--bbb-tab-background-active-color);
+.wp-block-blablablocks-tabs.is-style-style-2 {
+
+	.blablablocks-tabs__horizontal,
+	&.blablablocks-tabs__horizontal {
+		.blablablocks-tabs-buttons {
+			border-bottom: 1px solid var(--bbb-tab-background-active-color);
+		}
+	}
+}
+
+.wp-block-blablablocks-tabs.is-style-style-2 {
+
+	.blablablocks-tabs__vertical,
+	&.blablablocks-tabs__vertical {
+		&.blablablocks-tabs__left .blablablocks-tabs-buttons {
+			border-left: 1px solid var(--bbb-tab-background-active-color);
+		}
+	}
+}
+
+.wp-block-blablablocks-tabs.is-style-style-2 {
+
+	.blablablocks-tabs__vertical,
+	&.blablablocks-tabs__vertical {
+		&.blablablocks-tabs__right .blablablocks-tabs-buttons {
+			border-right: 1px solid var(--bbb-tab-background-active-color);
+		}
+	}
 }
 
 .blablablocks-tabs {
 
-	.blablablocks-tab {
-		display: flex;
-		gap: var(--bbb-tabs-gap, 0);
-	}
-
 	&.blablablocks-tabs__autoWidth .blablablock-tab-btn {
 		flex: 1 1 auto !important;
+	}
+
+	.blablablocks-tabs-buttons {
+		gap: var(--bbb-tabs-list-gap, 0);
+		display: flex;
+		justify-content: var(--bbb-tab-buttons-justify-content, left);
+		padding: 0;
+		flex-wrap: wrap;
+	}
+}
+
+.blablablocks-tab-container {
+	display: flex;
+	gap: var(--bbb-tabs-gap, 0);
+
+	.blablablock-tab-btn {
+		position: relative;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		gap: 8px;
+		height: auto;
+		flex: none;
+		cursor: pointer;
+		padding: var(--bbb-tab-padding-top) var(--bbb-tab-padding-right) var(--bbb-tab-padding-bottom) var(--bbb-tab-padding-left);
+		background-color: var(--bbb-tab-background-color);
+
+		.bbb-tab-icon {
+			width: var(--bbb-tab-icon-size, 24px);
+			height: var(--bbb-tab-icon-size, 24px);
+		}
+
+		.tab-button-text {
+			color: var(--bbb-tab-text-color);
+		}
+
+		.bbb-tab-icon svg {
+			fill: var(--bbb-tab-icon-color);
+		}
+
+		&.is-bbb-active-tab {
+			background-color: var(--bbb-tab-background-active-color);
+
+			.tab-button-text {
+				color: var(--bbb-tab-text-active-color);
+			}
+
+			.bbb-tab-icon svg {
+				fill: var(--bbb-tab-icon-active-color);
+			}
+		}
+
+		&:hover {
+			background-color: var(--bbb-tab-background-hover-color);
+
+			.tab-button-text {
+				color: var(--bbb-tab-text-hover-color);
+			}
+
+			.bbb-tab-icon svg {
+				fill: var(--bbb-tab-icon-hover-color);
+			}
+		}
+	}
+
+	&.blablablocks-tabs__horizontal {
+		flex-direction: column;
+
+		.blablablocks-tabs-buttons {
+			flex-direction: row;
+		}
+	}
+
+	&.blablablocks-tabs__vertical {
+		flex-direction: row;
+
+		&.blablablocks-tabs__right {
+			flex-direction: row-reverse;
+		}
+
+		.blablablocks-tabs-buttons {
+			flex-direction: column;
+		}
 	}
 
 	&.blablablocks-tabs-icon__top .blablablock-tab-btn {
@@ -50,91 +164,7 @@
 		flex-direction: row;
 	}
 
-	.blablablocks-tabs-buttons {
-		gap: var(--bbb-tabs-list-gap, 0);
-		display: flex;
-		justify-content: var(--bbb-tab-buttons-justify-content, left);
-		padding: 0;
-		flex-wrap: wrap;
-
-		.blablablock-tab-btn {
-			position: relative;
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			gap: 8px;
-			height: auto;
-			flex: none;
-			cursor: pointer;
-			padding: var(--bbb-tab-padding-top) var(--bbb-tab-padding-right) var(--bbb-tab-padding-bottom) var(--bbb-tab-padding-left);
-			background-color: var(--bbb-tab-background-color);
-
-			.bbb-tab-icon {
-				width: var(--bbb-tab-icon-size, 24px);
-				height: var(--bbb-tab-icon-size, 24px);
-			}
-
-			.tab-button-text {
-				color: var(--bbb-tab-text-color);
-			}
-
-			.bbb-tab-icon svg {
-				fill: var(--bbb-tab-icon-color);
-			}
-
-			&.is-bbb-active-tab {
-				background-color: var(--bbb-tab-background-active-color);
-
-				.tab-button-text {
-					color: var(--bbb-tab-text-active-color);
-				}
-
-				.bbb-tab-icon svg {
-					fill: var(--bbb-tab-icon-active-color);
-				}
-			}
-
-			&:hover {
-				background-color: var(--bbb-tab-background-hover-color);
-
-				.tab-button-text {
-					color: var(--bbb-tab-text-hover-color);
-				}
-
-				.bbb-tab-icon svg {
-					fill: var(--bbb-tab-icon-hover-color);
-				}
-			}
-		}
-	}
-
-	&.blablablocks-tabs__horizontal {
-
-		.blablablocks-tab {
-			flex-direction: column;
-		}
-
-		.blablablocks-tabs-buttons {
-			flex-direction: row;
-		}
-	}
-
-	&.blablablocks-tabs__vertical {
-
-		.blablablocks-tab {
-			flex-direction: row;
-		}
-
-		&.blablablocks-tabs__right .blablablocks-tab {
-			flex-direction: row-reverse;
-		}
-
-		.blablablocks-tabs-buttons {
-			flex-direction: column;
-		}
-	}
-
-	.blablablocks-tab-content{
+	.blablablocks-tab-content {
 		min-width: 0;
 	}
 }
